erd/templates/pc/parallelcluster-vpc.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Conditions": {
      "CreateInternetGateway": {
        "Fn::Equals": [
          {
            "Ref": "InternetGatewayId"
          },
          ""
        ]
      },
      "CreateVpc": {
        "Fn::Equals": [
          {
            "Ref": "VpcId"
          },
          ""
        ]
      },
      "ExistingInternetGateway": {
        "Fn::Not": [
          {
            "Fn::Equals": [
              {
                "Ref": "InternetGatewayId"
              },
              ""
            ]
          }
        ]
      }
    },
    "Description": "AWS ParallelCluster Public/Private Network",
    "Outputs": {
      "VpcId": {
        "Value": {
          "Fn::If": [
            "CreateVpc",
            {
              "Ref": "Vpc"
            },
            {
              "Ref": "VpcId"
            }
          ]
        }
      },
      "InternetGatewayId": {
        "Value": {
          "Fn::If": [
            "CreateInternetGateway",
            {
              "Ref": "InternetGateway"
            },
            {
              "Ref": "InternetGatewayId"
            }
          ]
        }
      },
      "PrivateSubnetId": {
        "Value": {
          "Ref": "Private"
        }
      },
      "PublicSubnetId": {
        "Value": {
          "Ref": "Public"
        }
      }
    },
    "Parameters": {
      "AvailabilityZone": {
        "Description": "(Optional) The zone in which you want to create your subnet(s)",
        "Type": "String"
      },
      "InternetGatewayId": {
        "Description": "(Optional) The id of the gateway (will be created if not specified). Rquired if VpcId is specified.",
        "Type": "String",
        "Default": ""
      },
      "PrivateCIDR": {
        "AllowedPattern": "\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}/(1[6-9]|2[0-9]|3[0-2])$",
        "Description": "The CIDR of the Private",
        "Default": "10.0.16.0/20",
        "Type": "String"
      },
      "PublicCIDR": {
        "AllowedPattern": "\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}/(1[6-9]|2[0-9]|3[0-2])$",
        "Description": "The CIDR of the Public",
        "Default": "10.0.0.0/24",
        "Type": "String"
      },
      "VpcId": {
        "Description": "(Optional) The VPC id to create subnets in. (will be created if not specified)",
        "Default": "",
        "Type": "String"
      },
      "VpcCIDR": {
        "Description": "(Optional) The CIDR for the VPC if it will be created (only valid if VpcId is left blank)",
        "Default": "10.0.0.0/16",
        "Type": "String"
      }
    },
    "Resources": {
      "Vpc": {
        "Condition": "CreateVpc",
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": {
            "Ref": "VpcCIDR"
          },
          "EnableDnsHostnames": true
        }
      },
      "DefaultRouteDependsOnPublic": {
        "Condition": "CreateInternetGateway",
        "DependsOn": "VPCGatewayAttachment",
        "Properties": {
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Fn::If": [
              "CreateInternetGateway",
              {
                "Ref": "InternetGateway"
              },
              {
                "Ref": "InternetGatewayId"
              }
            ]
          },
          "RouteTableId": {
            "Ref": "RouteTablePublic"
          }
        },
        "Type": "AWS::EC2::Route"
      },
      "DefaultRouteNoDependsOnPublic": {
        "Condition": "ExistingInternetGateway",
        "Properties": {
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Fn::If": [
              "CreateInternetGateway",
              {
                "Ref": "InternetGateway"
              },
              {
                "Ref": "InternetGatewayId"
              }
            ]
          },
          "RouteTableId": {
            "Ref": "RouteTablePublic"
          }
        },
        "Type": "AWS::EC2::Route"
      },
      "InternetGateway": {
        "Condition": "CreateInternetGateway",
        "Properties": {
          "Tags": [
            {
              "Key": "Name",
              "Value": "parallelcluster:internet-gateway"
            },
            {
              "Key": "Stack",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ]
        },
        "Type": "AWS::EC2::InternetGateway"
      },
      "NatEIPPublic": {
        "Properties": {
          "Domain": "vpc"
        },
        "Type": "AWS::EC2::EIP"
      },
      "NatGatewayPublic": {
        "Properties": {
          "AllocationId": {
            "Fn::GetAtt": [
              "NatEIPPublic",
              "AllocationId"
            ]
          },
          "SubnetId": {
            "Ref": "Public"
          }
        },
        "Type": "AWS::EC2::NatGateway"
      },
      "NatRoutePrivate": {
        "Properties": {
          "DestinationCidrBlock": "0.0.0.0/0",
          "NatGatewayId": {
            "Ref": "NatGatewayPublic"
          },
          "RouteTableId": {
            "Ref": "RouteTablePrivate"
          }
        },
        "Type": "AWS::EC2::Route"
      },
      "Private": {
        "Properties": {
          "AvailabilityZone": {
            "Ref": "AvailabilityZone"
          },
          "CidrBlock": {
            "Ref": "PrivateCIDR"
          },
          "MapPublicIpOnLaunch": false,
          "Tags": [
            {
              "Key": "Name",
              "Value": "parallelcluster:private-subnet"
            },
            {
              "Key": "Stack",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ],
          "VpcId": {
            "Fn::If": [
              "CreateVpc",
              {
                "Ref": "Vpc"
              },
              {
                "Ref": "VpcId"
              }
            ]
          }
        },
        "Type": "AWS::EC2::Subnet"
      },
      "Public": {
        "Properties": {
          "AvailabilityZone": {
            "Ref": "AvailabilityZone"
          },
          "CidrBlock": {
            "Ref": "PublicCIDR"
          },
          "MapPublicIpOnLaunch": true,
          "Tags": [
            {
              "Key": "Name",
              "Value": "parallelcluster:public-subnet"
            },
            {
              "Key": "Stack",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ],
          "VpcId": {
            "Fn::If": [
              "CreateVpc",
              {
                "Ref": "Vpc"
              },
              {
                "Ref": "VpcId"
              }
            ]
          }
        },
        "Type": "AWS::EC2::Subnet"
      },
      "RouteAssociationPrivate": {
        "Properties": {
          "RouteTableId": {
            "Ref": "RouteTablePrivate"
          },
          "SubnetId": {
            "Ref": "Private"
          }
        },
        "Type": "AWS::EC2::SubnetRouteTableAssociation"
      },
      "RouteAssociationPublic": {
        "Properties": {
          "RouteTableId": {
            "Ref": "RouteTablePublic"
          },
          "SubnetId": {
            "Ref": "Public"
          }
        },
        "Type": "AWS::EC2::SubnetRouteTableAssociation"
      },
      "RouteTablePrivate": {
        "Properties": {
          "Tags": [
            {
              "Key": "Name",
              "Value": "parallelcluster:route-table-private"
            },
            {
              "Key": "Stack",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ],
          "VpcId": {
            "Fn::If": [
              "CreateVpc",
              {
                "Ref": "Vpc"
              },
              {
                "Ref": "VpcId"
              }
            ]
          }
        },
        "Type": "AWS::EC2::RouteTable"
      },
      "RouteTablePublic": {
        "Properties": {
          "Tags": [
            {
              "Key": "Name",
              "Value": "parallelcluster:route-table-public"
            },
            {
              "Key": "Stack",
              "Value": {
                "Ref": "AWS::StackId"
              }
            }
          ],
          "VpcId": {
            "Fn::If": [
              "CreateVpc",
              {
                "Ref": "Vpc"
              },
              {
                "Ref": "VpcId"
              }
            ]
          }
        },
        "Type": "AWS::EC2::RouteTable"
      },
      "VPCGatewayAttachment": {
        "Condition": "CreateInternetGateway",
        "Properties": {
          "InternetGatewayId": {
            "Ref": "InternetGateway"
          },
          "VpcId": {
            "Fn::If": [
              "CreateVpc",
              {
                "Ref": "Vpc"
              },
              {
                "Ref": "VpcId"
              }
            ]
          }
        },
        "Type": "AWS::EC2::VPCGatewayAttachment"
      }
    }
  }
